src/components/Meetup/meetup.module.scss
@import "../../styles/utility/responds-to.scss";

.meetup {
  display: flex;
  flex-direction: column;
  margin-bottom: 2rem;
  @include responds-to("sm", "max") {
    &:last-child {
      margin-bottom: 0;
    }
  }

  span {
    display: flex;
    align-items: center;
    font-size: 0.875rem;
    margin-right: 0.5rem;
  }

  > span {
    margin-bottom: 0.5rem;
  }

  img {
    height: 16px;
    margin-right: 0.3rem;
    margin-bottom: 0;
  }

  p {
    display: -webkit-box;
    -webkit-line-clamp: 4;
    -webkit-box-orient: vertical;
    overflow: hidden;
  }

  h3 {
    margin-bottom: 0.5rem;
  }

  a {
    text-decoration: none;
  }
}

span.location {
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.details {
  display: grid;
  grid-template-columns: max-content max-content max-content 1fr;
  margin-bottom: 0.5rem;
  align-items: center;

  p {
    margin: 0 0 0.4rem;
    color: var(--grey-color);
    flex: 1;

    &:first-of-type {
      flex: 0 1 145px;
    }
  }
}

.link {
  margin-top: auto;

  a {
    display: grid;
    grid-template-columns: max-content max-content;
    align-items: center;

    img {
      margin-right: 0.25rem;
      height: 24px;
    }
  }
}

